--- a/components/txtx-addon-network-stacks/Cargo.toml
+++ b/components/txtx-addon-network-stacks/Cargo.toml
@@ -19,6 +19,7 @@ libsecp256k1 = { version = "0.7.0" }
 serde_json = "1.0.113"
 serde = "1"
 serde_derive = "1"
+async-recursion = "1"
 
 [features]
 default = ["clarity-repl/sdk", "clarity-vm/default", "clarinet-deployments/default", "txtx-addon-kit/default"]
