--- a/components/txtx-cli/Cargo.toml
+++ b/components/txtx-cli/Cargo.toml
@@ -34,6 +34,7 @@ mustache = "0.9.0"
 tokio = "1.37.0"
 mime_guess = "2.0.4"
 serde_yml = "0.0.10"
+dotenvy_macro = "0.15.7"
 
 [features]
 default = ["cli"]
