--- a/components/txtx-cli/Cargo.toml
+++ b/components/txtx-cli/Cargo.toml
@@ -35,6 +35,7 @@ tokio = "1.37.0"
 mime_guess = "2.0.4"
 serde_yml = "0.0.10"
 dotenvy_macro = "0.15.7"
+tokio-tungstenite = "0.23.1"
 
 [features]
 default = ["cli"]
