--- a/components/txtx-cli/Cargo.toml
+++ b/components/txtx-cli/Cargo.toml
@@ -34,6 +34,9 @@ mustache = "0.9.0"
 tokio = "1.37.0"
 mime_guess = "2.0.4"
 serde_yml = "0.0.10"
+dialoguer = "0.11.0"
+console = "0.15.8"
+convert_case = "0.6.0"
 
 [features]
 default = ["cli"]
