--- a/components/txtx-core/Cargo.toml
+++ b/components/txtx-core/Cargo.toml
@@ -17,6 +17,9 @@ indexmap = "2.2.6"
 petgraph = "0.6.5"
 ripemd = "0.1.3"
 sha2 = "0.10.8"
+serde = "1"
+serde_derive = "1"
+serde_yml = "0.0.10"
 
 [dev-dependencies]
 txtx-addon-network-stacks = { path = "../txtx-addon-network-stacks"}
