--- a/components/txtx-cli/Cargo.toml
+++ b/components/txtx-cli/Cargo.toml
@@ -35,7 +35,8 @@ tokio = "1.37.0"
 mime_guess = "2.0.4"
 serde_yml = "0.0.10"
 dotenvy_macro = "0.15.7"
-tokio-tungstenite = "0.23.1"
+tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
+native-tls = "0.2.11"
 totp-rs = "^5.0"
 sha2 = "0.10.8"
 base58 = "0.2.0"
