--- a/examples/stacks/bns/txtx.yml
+++ b/examples/stacks/bns/txtx.yml
@@ -2,15 +2,12 @@
 name: BNS Runbook
 id: bns-runbook
 environments:
-  development:
+  devnet:
+    stacks_network_id: testnet
+    stacks_api_url: http://localhost:3999
+  testnet:
     stacks_network_id: testnet
     stacks_api_url: https://api.testnet.hiro.so
-  staging:
-    stacks_network_id: testnet
-    stacks_api_url: https://api.testnet.hiro.so
-  production:
-    stacks_network_id: mainnet
-    stacks_api_url: https://api.mainnet.hiro.so
 runbooks:
 - name: Register BNS
   id: register-bns
