--- a/components/txtx-cli/Cargo.toml
+++ b/components/txtx-cli/Cargo.toml
@@ -42,6 +42,7 @@ base58 = "0.2.0"
 dialoguer = "0.11.0"
 console = "0.15.8"
 convert_case = "0.6.0"
+rusqlite = "0.27.0"
 
 [features]
 default = ["cli"]
