--- a/components/txtx-core/Cargo.toml
+++ b/components/txtx-core/Cargo.toml
@@ -19,6 +19,7 @@ ripemd = "0.1.3"
 serde = "1"
 serde_derive = "1"
 serde_yml = "0.0.10"
+chrono = "0.4.38"
 
 [dev-dependencies]
 txtx-addon-network-stacks = { path = "../txtx-addon-network-stacks"}
