--- a/components/txtx-cli/Cargo.toml
+++ b/components/txtx-cli/Cargo.toml
@@ -10,6 +10,7 @@ path = "src/main.rs"
 [dependencies]
 txtx-core = { path = "../txtx-core" }
 txtx-addon-network-stacks = { path = "../txtx-addon-network-stacks" }
+txtx-addon-network-evm = { path = "../txtx-addon-network-evm" }
 txtx-gql = { path = "../txtx-gql" }
 hiro-system-kit = "0.3.1"
 clap = { version = "4.4.6", features = ["derive"], optional = true }
